--- a/package.json
+++ b/package.json
@@ -23,13 +23,12 @@
     "axios": "^1.3.4",
     "chart.js": "^4.2.1",
     "cookie": "^0.5.0",
-    "cookies-next": "^2.1.1",
     "formik": "^2.2.9",
     "formik-material-ui": "^4.0.0-alpha.2",
+    "js-cookie": "^3.0.1",
     "leaflet": "^1.9.3",
     "moment": "^2.29.4",
     "next": "^13.2.4",
-    "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
